# codehydra

./: .gitattributes  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INVESTIGATION.md  README.md  RESEARCH-provides-closures.md  electron-builder.yaml  electron.vite.config.ts  eslint.config.js  opencode.jsonc  package-lock.json  package.json  playwright.config.ts  playwright.dev.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.bin.ts  vite.config.js  vite.defaults.ts  vitest.config.ts
.claude/: settings.json
.github/: release.yml
__mocks__/: electron.ts  vscode.ts
docs/: AGENTS.md  AGENTS_INTEGRATION.md  AGENT_PROVIDER.md  API.md  ARCHITECTURE.md  CREATE_WORKSPACE.md  DELETE_WORKSPACE.md  INITIAL_CODE_SERVER_INTEGRATION.md  INITIAL_CONCEPT.md  INITIAL_WORKSPACE_PROVIDER.md  INTENTS.md  INTENT_BASED_ARCHITECTURE.md  INTENT_BASED_TESTING.md  KEYBOARD_NAVIGATION.md  NPM_DIST.md  OPENCODE_INTEGRATION.md  OPENCODE_SCANNING.md  PATTERNS.md  PLANNING.md  PROJECT_PERSISTENCE.md  QUALITY.md  README.md  RELEASE.md  SERVICES.md  STATUS_INDICATOR.md  TESTING.md  USER_INTERFACE.md  WORKSPACE_INIT.md
e2e/: cold-start.e2e.ts  env.ts  fixtures.ts  open-project.e2e.ts  starting-screen.e2e.ts  tsconfig.json  workspace-lifecycle.e2e.ts
extensions/: README.md  extensions.json  external.json  tsconfig.ext.json  vite.config.ext.ts
patches/: systeminformation@5.27.11.patch
planning/: AGENT_MODULE.md  AGENT_PROVIDER_ABSTRACTION.md  AGENT_SELECTION_SETUP.md  AGENT_STATUS_SIMPLIFY.md  AGENT_UPDATE_STATUS.md  API_DOCUMENTATION.md  APP_DISTRIBUTION.md  APP_ICON_BADGE.md  APP_LIFECYCLE_INTENTS.md  APP_LOGO.md  APP_SETUP_MIGRATION.md  AUTO_UPDATE.md  BEHAVIOR_DRIVEN_TESTING.md  BINARY_DISTRIBUTION.md  BOUNDARY_TESTS.md  BOUNDARY_TEST_UTILS.md  BUILD_INFO.md  CLAUDE_CODE_AGENT_PROVIDER.md  CLOSE_PROJECT_DIALOG.md  CODE_CLI_PATH.md  CODE_SERVER_WINDOWS_BUILD.md  (+84 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_status.rs  agent_status_manager.rs  agent_status_provider.rs  bootstrapper.rs  code_server.rs  config.rs  error.rs  git_worktree_provider.rs  lib.rs  main.rs  project_store.rs  runtime_versions.rs  setup.rs  test_utils.rs  workspace_provider.rs
src-tauri/src/opencode/: client.rs  discovery.rs  mod.rs  provider.rs  types.rs
src-tauri/src/platform/: download.rs  mod.rs  paths.rs  process.rs
src-tauri/tests/: agent_status_integration.rs  integration_test.rs
(+1462 files in other folders)
