[package]
name = "chime"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
port_scanner = "0.1.5"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls", "stream"] }
git2 = "0.20.2"
async-trait = "0.1.89"
thiserror = "2.0.17"
futures = "0.3.31"
process-wrap = { version = "8.2.1", features = ["tokio1", "process-group", "job-object"] }
percent-encoding = "2.3.2"
dirs = "6.0.0"
sha2 = "0.10.9"
zip = "6.0.0"
tar = "0.4.44"
flate2 = "1.1.5"
xz2 = "0.1.7"
tokio-util = "0.7.17"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.23.0"

